--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "devDependencies": {
     "@rollup/pluginutils": "^5.1.4",
     "multer": "^1.4.5-lts.1",
-    "nock": "^13.5.1",
     "vite": "^6.0.11",
-    "vite-plugin-mock": "^3.0.2",
-    "vitest": "^1.2.1"
+    "vite-plugin-mock": "^3.0.2"
   },
   "dependencies": {
     "hmpl-js": "^2.2.3"
